--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Chillbit</title>
   </head>
   <body>
-  <canvas id="canvas" 100 200>Chillbit</canvas>
+  <canvas id="canvas" width="100" height="200">Chillbit</canvas>
   </body>
   <script>
   	let canvas = document.getElementById("canvas");
