--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Chillbit</title>
   </head>
   <body>
-  <canvas id="canvas" width="100" height="200">Chillbit</canvas>
+  <canvas id="canvas" width="200" height="100">Chillbit</canvas>
   </body>
   <script>
   	let canvas = document.getElementById("canvas");
   	let ctx = canvas.getContext("2d");
   	ctx.font = "30px Arial";
-  	ctx.strokeText("Chillbit", 100, 200);
+  	ctx.fillText("Chillbit", 200, 100);
   </script>
 </html>
