--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script>
   	let canvas = document.getElementById("canvas");
   	let ctx = canvas.getContext("2d");
-  	ctx.font = "30px Arial";
-  	ctx.fillText("Chillbit", 200, 100);
+  	ctx.fillStyle = "green";
+  	ctx.fillRect(0, 0, 200, 100);
   </script>
 </html>
