--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   	let ctx = canvas.getContext("2d");
   	ctx.fillStyle = "green";
   	ctx.fillRect(0, 0, 200, 100);
+  	ctx.font = "30px Arial";
+  	ctx.fillText("Test", 0, 0)
   </script>
 </html>
