--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Chillbit</title>
+    <style>
+    body {
+
+    }
+	</style>
   </head>
   <body>
-  <canvas id="canvas" width="200" height="100">Chillbit</canvas>
   </body>
-  <script>
-  	let canvas = document.getElementById("canvas");
-  	let ctx = canvas.getContext("2d");
-  	ctx.fillStyle = "green";
-  	ctx.fillRect(0, 0, 200, 100);
-  	ctx.font = "30px Arial";
-  	ctx.fillText("Test", 0, 0)
-  </script>
 </html>
