--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
     body {
     	background-image: url("kimbra.png");
-    	background-size: 100%;
+    	background-repeat: no-repeat;
 
     }
 	</style>
