--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     	background-repeat: no-repeat;
 
     }
+    #player-frame {
+    	visibility: hidden;
+    }
 	</style>
   </head>
   <body>
+  	<iframe id="player-frame" width="560" height="315" src="https://www.youtube.com/embed/elyk9MBY72U?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
+  <script>
+  	document.addEventListener('mousedown', ()=>{
+  		document.getElementById("player-frame").style.visibility = "visible";
+  	});
+  </script>
 </html>
