--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</style>
   </head>
   <body>
-  	<iframe id="player-frame" width="560" height="315" src="https://www.youtube.com/embed/elyk9MBY72U?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  	<iframe id="player-frame" width="100%" height="100%" src="https://www.youtube.com/embed/elyk9MBY72U?controls=0?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
   <script>
   	document.addEventListener('mousedown', ()=>{
