--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     body {
     	background-image: url("kimbra.png");
     	background-repeat: no-repeat;
+    	height: 98vh;
 
     }
-    #player-frame {
-    	visibility: hidden;
+    #player-cont{
+    	height: 100%;
+    	display: flex;
+    	align-items: flex-end;
+    	justify-content: flex-start;
     }
 	</style>
   </head>
   <body>
-  	<iframe id="player-frame" width="100%" height="100%" src="https://www.youtube.com/embed/elyk9MBY72U?controls=0?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  	<div id="player-cont">
+  	<iframe src="https://open.spotify.com/embed/track/6mEDMe0zG5pYrsRxizjauk" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
   </body>
-  <script>
-  	document.addEventListener('mousedown', ()=>{
-  		document.getElementById("player-frame").style.visibility = "visible";
-  	});
-  </script>
 </html>
