--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Chillbit</title>
-    <style>
-    body {
-    	background-image: url("kimbra.png");
-    	background-repeat: no-repeat;
-    	height: 98vh;
-
-    }
-	</style>
+    <style></style>
   </head>
   <body>
+	  <h1>~There Is No Home Like Radriome~</h1>
+	  <p>Radriome Mental Facility & Sanitorium - Est. 1922</p>
   </body>
 </html>
