--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <style></style>
   </head>
   <body>
-	  <h1>~There Is No Home Like Radriome~</h1>
-	  <p>Radriome Mental Facility & Sanitorium - Est. 1922</p>
+	  <h1>There Is No Home Like Radriome</h1>
+	  <p>Radriome Mental Facility & Sanitorium- Est. 1922</p>
+	  
+	  <h1>Facility closed due to massive ethics violations - October 18, 1979</h1>
+	<h1>Facility acquired by the Department of Defense - July 22, 1980</h1>
+	  <h1>Facility retrofitted as Radio Acoustic Listening Facility - October 2, 1980</h1>
+	  <h1>Facility condemmed due to leak of hazardas chemicals. 15 Deaths, 22 left with potential life long illness, 29 left with minor injuries. - May 10, 1986</h1>
+	  
   </body>
 </html>
