--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <style></style>
   </head>
   <body>
-	  <h2>Radriome Mental Facility & Sanitorium - Est. 1922</h2>
-	  <h3>There Is No Home Like Radriome - Official Slogan</h3>
+	  <h2>Radriome Mental Facility & Sanitorium - Est. 1922 | "There Is No Home Like Radriome" - Official Slogan</h2>
 	  <h2>Facility closed due to massive ethics violations - October 18, 1979</h2>
 	<h2>Facility acquired by the Department of Defense - July 22, 1980</h2>
 	  <h2>Facility retrofitted as Radio Acoustic Listening Facility - October 2, 1980</h2>
