--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
-  <title>Chillbit Dot Net</title>
-  <script>
-    window.addEventListener("resize", scale_video)
-    scale_video(){
-      let vid = document.getElementById("vid")
-      vid.width = window.innerWidth
-      vid.height = window.innerHeight
-    }
-    scale_video()
+  <head>
+    <title>Chillbit Dot Net</title>
+    <script>
+      window.addEventListener("resize", scale_video)
+      scale_video(){
+        let vid = document.getElementById("vid")
+        vid.width = window.innerWidth
+        vid.height = window.innerHeight
+      }
+      scale_video()
   </script>
+  </head>
   <body>
     <video id="vid" width="100" height="100" autoplay>
       <source src="The sound of power lines part 2 [TTCcR0KqVmk].webm" type="video/webm">
