--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <html>
   <head>
     <title>Chillbit Dot Net</title>
-    <script>
-      window.addEventListener("resize", scale_video)
+    <script type="text/javascript">
+      document.addEventListener("resize", scale_video)
       scale_video(){
         let vid = document.getElementById("vid")
         vid.width = window.innerWidth
         vid.height = window.innerHeight
+        console.log("Window Is Being Resized...")
       }
-      scale_video()
+      document.addEventListener("DOMContentLoaded", ()=>{
+        scale_video()
+      })
   </script>
   </head>
   <body>
-    <video id="vid" width="100" height="100" autoplay>
+    <video id="vid" width="500" height="500" autoplay loop onLoadStart="this.volume=0.5">
       <source src="The sound of power lines part 2 [TTCcR0KqVmk].webm" type="video/webm">
     </video>
   </body>
