--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Chillbit Dot Net</title>
     <script type="text/javascript">
       document.addEventListener("resize", scale_video)
-      scale_video = function(){
+      function scale_video(){
         let vid = document.getElementById("vid")
         vid.width = window.innerWidth
         vid.height = window.innerHeight
