--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Chillbit Dot Net</title>
     <script type="text/javascript">
-      document.addEventListener("resize", scale_video)
+      window.addEventListener("resize", scale_video)
       function scale_video(){
         let vid = document.getElementById("vid")
         vid.width = window.innerWidth
