--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       document.addEventListener("DOMContentLoaded", ()=>{
         scale_video()
         console.log("dom loaded")
+        document.getElementById("vid").volume = 0.5
       })
       
       window.addEventListener("resize", scale_video)
