--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
       
       document.addEventListener("DOMContentLoaded", ()=>{
         scale_video()
-        //document.getElementById("vid").volume = 0.5
+        document.getElementById("vid").volume = 0.5
       })
       
       window.addEventListener("resize", scale_video)
   </script>
+  <style>
+    body {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+    }
+  </style>
   </head>
   <body>
-    <video id="vid" width="500" height="500" autoplay loop muted>
+    <video id="vid" width="500" height="500" autoplay loop muted controls>
       <source src="The sound of power lines part 2 [TTCcR0KqVmk].webm" type="video/webm">
     </video>
   </body>
