--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       })
       
       window.addEventListener("resize", scale_video)
+      
+      setTimeout(()=>{
+        document.getElementById("vid").volume = 0.5
+      }, 500)
   </script>
   <style>
     body {
