--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       
       document.addEventListener("DOMContentLoaded", ()=>{
         scale_video()
+        setTimeout(500, ()=>{
+          console.log("Timeout")
+          document.getElementdById("vid").src = "https://www.youtube.com/embed/TTCcR0KqVmk"
+        })
       })
       
       window.addEventListener("resize", scale_video)
