--- a/index.html
+++ b/index.html
@@ -1,32 +1,6 @@
 <html>
   <head>
     <title>Chillbit Dot Net</title>
-    <script type="text/javascript">
-      function scale_video(){
-        let vid = document.getElementById("vid")
-        vid.width = window.innerWidth * 0.95
-        vid.height = window.innerHeight * 0.95
-      }
-      
-      document.addEventListener("DOMContentLoaded", ()=>{
-        scale_video()
-        setTimeout(500, ()=>{
-          console.log("Timeout")
-          document.getElementdById("vid").src = "https://www.youtube.com/embed/TTCcR0KqVmk"
-        })
-      })
-      
-      window.addEventListener("resize", scale_video)
-  </script>
-  <style>
-    body {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-    }
-  </style>
   </head>
-  <body>
-    <iframe id="vid" width="560" height="315" src="https://www.youtube.com/embed/TTCcR0KqVmk?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </body>
+  <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=TTCcR0KqVmk'"/>
 </html>
