--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <head>
     <title>Chillbit Dot Net</title>
   </head>
-  <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=TTCcR0KqVmk'"/>
+  <meta http-equiv="Refresh" content="0; url='https://youtu.be/rixzL5WlS-Y?t=14'"/>
 </html>
