--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
   <head>
     <title>Chillbit Dot Net</title>
   </head>
-  <meta http-equiv="Refresh" content="0; url='https://youtu.be/rixzL5WlS-Y?t=14'"/>
+  <body>
+        <script type="module" src="https://cdn.jsdelivr.net/npm/@babylonjs/viewer@preview/dist/babylon-viewer.esm.min.js"></script>
+        <babylon-viewer source="https://playground.babylonjs.com/scenes/BoomBox.glb"></babylon-viewer>
+    </body>
 </html>
